test: add ConfigUtils tests